Update and rename README.md to index.html

--- a/index.html
+++ b/index.html
@@ -42,3 +42,5 @@
                 <li>l'inverno del mondo</li>
                 <li>i giorni dell'eternità</li>
             </ol>
+</body>
+</html>
